# aws_ml_engineer_exercises

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: sagemaker_costs.sh
notebooks/01_linear_learner/: linear_learner_sagemaker_exercise.ipynb
notebooks/02_xgboost/: xgboost_sagemaker_exercise.ipynb  xgboost_tutorial.ipynb
notebooks/03_light_gbm/: lightgbm_sagemaker_exercise.ipynb
notebooks/04_seq_to_seq/: seq2seq_sagemaker_exercise.ipynb
notebooks/05_deep_ar/: README.md  deepar_sagemaker_exercise.ipynb
notebooks/06_blazing_text/: blazingtext_sagemaker_exercise.ipynb
notebooks/07_object_2_vec/: object2vec_sagemaker_exercise.ipynb
notebooks/08_object_detection/: object_detection_sagemaker_exercise.ipynb
notebooks/09_image_classification/: image_classification_sagemaker_exercise.ipynb
notebooks/10_semantic_segmentation/: semantic_segmentation_sagemaker_exercise.ipynb
notebooks/11_random_cut_forrest/: random_cut_forest_sagemaker_exercise.ipynb
notebooks/12_neural_topic_model/: neural_topic_model_sagemaker_exercise.ipynb
notebooks/13_latent_dirichlet_allocation/: lda_sagemaker_exercise.ipynb
notebooks/14_knn/: knn_sagemaker_exercise.ipynb
notebooks/15_k_means_clustering/: kmeans_sagemaker_exercise.ipynb
notebooks/16_principal_component_analysis/: pca_sagemaker_exercise.ipynb
notebooks/17_factorization_machines/: factorization_machines_sagemaker_exercise.ipynb
notebooks/18_ip_insights/: ip_insights_sagemaker_exercise.ipynb
notebooks/linear_learner/: README.md  generate_linear_learner_data.py
(+9 files in other folders)
