[project]
name = "aws-ml-engineer-exercises"
version = "0.1.0"
description = "Hands-on exercises covering AWS SageMaker built-in algorithms"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jupyterlab>=4.0",
    "notebook>=7.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "boto3>=1.28",
    "sagemaker>=2.200",
    "shap>=0.44",
    "python-dotenv>=1.0",
]

[tool.uv]
override-dependencies = [
    "tritonclient; sys_platform == 'linux'",
    "perf-analyzer; sys_platform == 'linux'",
]
